--- a/package.json
+++ b/package.json
@@ -9,12 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.1",
     "next": "13.1.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.13",
     "eslint": "8.32.0",
-    "eslint-config-next": "13.1.3"
+    "eslint-config-next": "13.1.3",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4"
   }
 }
